# python-gnupg

./: .coveragerc  .flake8  .gitignore  .hgignore  .hgtags  .travis.yml  LICENSE.txt  MANIFEST.in  README.rst  appveyor.yml  av-tox.ini  gh-tox.ini  gnupg.py  gnupg.pyi  main.py  messages.json  package.json  pyproject.toml  release  setup.cfg  setup.py  test_gnupg.py  test_pubring.gpg  test_secring.gpg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-package.yml
docs/: Makefile  conf.py  index.rst  requirements.txt  spelling_wordlist.txt
docs/_templates/: page.html
files_test/: libpri-1.5.0.tar.gz.asc  w_scan-20170107.tar.bz2  w_scan-20170107.tar.bz2.asc  xterm-327.tgz  xterm-327.tgz.asc
