[metadata]
name = python-gnupg
version = attr: gnupg.__version__
description = A wrapper for the Gnu Privacy Guard (GPG or GnuPG)
long_description =
  This module allows easy access to GnuPG's key management, encryption and signature
  functionality from Python programs. It is intended for use with Python 2.4 or
  greater.

  Releases are normally signed using a GnuPG key with the user id
  vinay_sajip@yahoo.co.uk and the following fingerprint:

  CA74 9061 914E AC13 8E66  EADB 9147 B477 339A 9B86

  As PyPI no longer shows signatures, you should be able to download release archives
  and signatures from

  https://github.com/vsajip/python-gnupg/releases/

  The archives should be the same as those uploaded to PyPI.

url = https://github.com/vsajip/python-gnupg
author = Vinay Sajip
author_email = vinay_sajip@yahoo.co.uk
maintainer = Vinay Sajip
maintainer_email = vinay_sajip@yahoo.co.uk
license = BSD
license_files = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://gnupg.readthedocs.io/
    Source = https://github.com/vsajip/python-gnupg
    Tracker = https://github.com/vsajip/python-gnupg/issues
keywords = GnuPG,cryptography,encryption,decryption,signing,verification

[options]
py_modules = gnupg

[bdist_wheel]
universal = 1
